# amenity-ai

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  EXTRACTORS.md  PROJECT_SPEC.md  README.md  install.sh  pyproject.toml  uninstall.sh
archiver/: __main__.py  help_screen.py  perf_report.py  taxonomy.py  ui_status.py
archiver/taxonomies/: en.txt  it.txt
