[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amenity-ai"
version = "0.9.13"
description = "Terminal UI to analyze and organize files using a local LLM (Ollama)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "amenity-ai contributors"}]
dependencies = [
  "textual>=0.60,<1",
  "pypdf>=4,<6",
  "pymupdf>=1.24,<2",
  "pytesseract>=0.3,<1",
  "Pillow>=10,<12",
]

[project.urls]
Repository = "https://github.com/elmisi/amenity-ai"

[project.scripts]
amenity-ai = "archiver.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["archiver*"]

[tool.setuptools.package-data]
archiver = ["taxonomies/*.txt"]
